# mailman-public-inbox

./: MANIFEST.in  README.org  README.rst  mailman-public-inbox.cfg  pyproject.toml  setup.py
mailman_public_inbox/: __init__.py
